TheadPool Executor + WRK perf tests