@@ -10,7 +10,7 @@
 
 	<properties>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	    <spring.version>4.0.9.RELEASE</spring.version>
+	    <spring.version>4.2.0.RELEASE</spring.version>
 	    <spring.security.version>3.2.6.RELEASE</spring.security.version>
 	    <spring.security.oauth.version>2.0.7.RELEASE</spring.security.oauth.version>
 	    <angular.version>1.3.15</angular.version>
@@ -74,6 +74,8 @@
 								<configuration>
 									<path>/routing</path>
 									<fork>true</fork>
+									<serverXml>server.xml</serverXml>
+									<useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader>
 								</configuration>
 							</execution>
 						</executions>
@@ -106,6 +108,12 @@
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<configuration>
 						<path>/routing</path>
+						<!-- <serverXml>src/main/resources/server.xml</serverXml> -->
+						<!-- <useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader> -->
+						<connectorHttpProtocol>org.apache.coyote.http11.Http11NioProtocol</connectorHttpProtocol>
+						<systemProperties>
+							<JAVA_OPTS>-server -Xmx512m -Xms512m -XX:+AggressiveOpts</JAVA_OPTS>
+						</systemProperties>
 					</configuration>
 			</plugin>
 		</plugins>
@@ -318,6 +326,12 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.3.3</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.timgroup</groupId>
+		    <artifactId>java-statsd-client</artifactId>
+		    <version>3.0.1</version>
 		</dependency>
 
 	</dependencies>
